--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ma pi leng Drink</title>
 
-    <script src="../layout/home/main.js"></script>
-
     <!-- css home -->
-    <link rel="stylesheet" href="../layout/footer/footer.css" />
-    <link rel="stylesheet" href="../css/index.css" />
-    <link rel="stylesheet" href="../css/response.css" />
-    <link rel="stylesheet" href="../layout/home/love-product.css" />
-    <link rel="stylesheet" href="../layout//product/products.css" />
-    <link rel="stylesheet" href="../layout/introduce/introduce.css" />
-    <link rel="stylesheet" href="../layout/contact/contact.css" />
-    <link rel="stylesheet" href="../layout/news/news.css" />
-    <link rel="stylesheet" href="../layout/home/main.css" />
+    <link rel="stylesheet" href="./layout/footer/footer.css" />
+    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/response.css" />
+    <link rel="stylesheet" href="./layout/home/love-product.css" />
+    <link rel="stylesheet" href="./layout//product/products.css" />
+    <link rel="stylesheet" href="./layout/introduce/introduce.css" />
+    <link rel="stylesheet" href="./layout/contact/contact.css" />
+    <link rel="stylesheet" href="./layout/news/news.css" />
+    <link rel="stylesheet" href="./layout/home/main.css" />
 
     <link
       rel="stylesheet"
@@ -178,4 +176,5 @@
     ></script>
   </body>
   <script src="../js/app.js"></script>
+  <script src="../layout/home/main.js"></script>
 </html>
