--- a/index.html
+++ b/index.html
@@ -79,20 +79,20 @@
     <header>
       <div class="nav-wrapper">
         <div class="logo-container">
-          <img class="logo" src="../assets/images/logo.webp" alt="Logo" />
+          <img class="logo" src="./assets/images/logo.webp" alt="Logo" />
         </div>
         <nav>
           <div class="nav-container">
             <ul class="nav-tabs">
               <li
                 class="nav-tab active-class"
-                onclick="clickTabMenuHeader('../layout/home/main.html')"
+                onclick="clickTabMenuHeader('./layout/home/main.html')"
               >
                 Trang chủ
               </li>
               <li
                 class="nav-tab tab-sub-menu active-class"
-                onclick="clickTabMenuHeader('../layout/product/products.html')"
+                onclick="clickTabMenuHeader('./layout/product/products.html')"
               >
                 Sản phẩm <i class="fa-solid fa-angle-down"></i>
                 <div class="sub-menu">
@@ -119,7 +119,7 @@
               </li>
               <li
                 class="nav-tab tab-sub-menu active-class"
-                onclick="clickTabMenuHeader('../layout/news/news.html')"
+                onclick="clickTabMenuHeader('./layout/news/news.html')"
               >
                 Tin tức <i class="fa-solid fa-angle-down"></i>
                 <div class="sub-menu-tt">
@@ -132,13 +132,13 @@
               </li>
               <li
                 class="nav-tab active-class"
-                onclick="clickTabMenuHeader('../layout/introduce/introduce.html')"
+                onclick="clickTabMenuHeader('./layout/introduce/introduce.html')"
               >
                 Giới thiệu
               </li>
               <li
                 class="nav-tab active-class"
-                onclick="clickTabMenuHeader('../layout/contact/contact.html')"
+                onclick="clickTabMenuHeader('./layout/contact/contact.html')"
               >
                 Liên hệ
               </li>
@@ -175,6 +175,6 @@
       referrerpolicy="no-referrer"
     ></script>
   </body>
-  <script src="../js/app.js"></script>
-  <script src="../layout/home/main.js"></script>
+  <script src="./js/app.js"></script>
+  <script src="./layout/home/main.js"></script>
 </html>
