--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   </head>
   <body>
     <!-- nav start -->
+
     <section class="nav">
       <div class="nav-container">
         <div class="info">
@@ -161,6 +162,9 @@
     <!-- footer -->
     <div id="footer"></div>
 
+    <!-- Back to top button -->
+    <a id="button"></a>
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"
       integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA=="
@@ -176,5 +180,7 @@
     ></script>
   </body>
   <script src="./js/app.js"></script>
+  <!-- <script src="./layout/home/main.js"></script> -->
+
   <script src="./layout/home/main.js"></script>
 </html>
